Endpoint for getting a document previously uploaded
        I've finished the endpoint to retrieve a document previously
        uploaded using its hash.

        Reported-by: Mesi Rendon
